fix banner title on mobile

--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -3,13 +3,13 @@
 		font-family: 'Kashima';
         color: white;
         font-weight: bold;
-        font-size: 60px;
+        font-size: 100px;
         text-align: center;
         text-shadow: black 4px 3px;
         margin-top: 45%;
 		text-transform: uppercase;
 		@media screen and (max-width: $md) {
-			font-size: 80px;
+			font-size: 60px;
         }
         @media screen and (min-width: $md) and (max-width: $lg) {
 			margin-top: 20%;
